# dusty_solar_panel_prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_cd_pipeline.yml
src/: app.py  exception.py  logger.py  main.py  settings.py  utils.py
src/components/: data_cleaning.py  data_extractor.py  data_ingestion.py  data_transformation.py  deploy_model.py  model_builder.py  model_trainer.py
src/pipeline/: inference_pipeline.py  train_pipeline.py
tests/: conftest.py  test_data_cleaning.py  test_data_extractor.py
