[project]
name = "dusty_solar_panel_prediction"
version = "0.1.0"
description = "Image classification of dirty vs clean solar panels."
authors = [
    {name = "Mark Hague"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow-macos (>=2.16.2,<3.0.0)",
    "tensorflow-metal (>=1.2.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "imagehash (>=4.3.2,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "notebook (>=7.5.4,<8.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
